ressource article api
