# app/Models/aff/HeadlineHero.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Models\aff;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class HeadlineHero extends Model
+{
+    use HasFactory;
+
+    protected $table='headlineheros';
+    protected $fillable=[
+        "page",
+        "title",
+        "subtitle",
+        "image"
+    ];
+
+}
